Build with Java 17 and modernize GitHub actions